# the_silver_searcher

./: .gitignore  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  format.sh  sanitize.sh
doc/: ag.1  ag.1.md  generate_man.sh
m4/: aw_flags.m4
src/: compiler.h  decompress.c  decompress.h  ignore.c  ignore.h  lang.c  lang.h  log.c  log.h  main.c  options.c  options.h  pcre_api.c  pcre_api.h  print.c  print.h  print_w32.c  scandir.c  search.c  search.h  uthash.h  util.c  util.h  version.c.in  version.h  zfile.c
src/win32/: config.h
tests/: adjacent_matches.t  agrc.t  bad_path.t  case_sensitivity.t  color.t  column.t  count.t  empty_environment.t  empty_match.t  exitcodes.t  file_search_regex.t  filetype.t  ignore_dir.t  ignore_gitignore.t  list_file_types.t  max_count.t  multiline.t  null_lines.t  option_GX.t  option_g.t  passthrough.t  pipecontext.t  setup.sh  test-driver
tests/big/: big_file.t
